タイポ修正とそれに付随する見た目上のデグレに対処

--- a/assets/main.css
+++ b/assets/main.css
@@ -65,8 +65,9 @@ a {
     border: none;
 }
 
-#table-of-ontents {
-    padding: 2rem;
+#table-of-contents {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 #postamble {
